--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,19 @@
-<h1>
-  {{title}}
-</h1>
+<!-- navigation bar -->
+<nav class="navbar navbar-light bg-faded">
+  <a class="navbar-brand" href="#">Company</a>
+  <ul class="nav navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item"
+    [routerLink]="['/login']" [routerLinkActive]="['active']">
+      <a class="nav-link" href="/login">Login</a>
+    </li>
+  </ul>
+  <form class="form-inline pull-xs-right">
+    <input class="form-control" type="text" placeholder="Search">
+    <button class="btn btn-outline-success" type="submit">Search</button>
+  </form>
+</nav>
+
+<router-outlet></router-outlet>
