--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,3 +1,20 @@
-<p>
-  user-login works!
-</p>
+<div class="container">
+
+
+
+        <form class="form-signin">
+          <h2 class="form-signin-heading">Sign In</h2>
+          <label for="inputEmail" class="sr-only">Email address</label>
+          <input id="inputUsername" class="form-control" placeholder="Username" required="" autofocus="">
+          <label for="inputPassword" class="sr-only">Password</label>
+          <input id="inputPassword" class="form-control" placeholder="Password" required="" type="password">
+          <div class="checkbox">
+            <label>
+              <input value="remember-me" type="checkbox"> Remember me
+            </label>
+          </div>
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        </form>
+
+
+</div>
