--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <!-- navigation bar -->
-<nav class="navbar navbar-light bg-faded">
+<nav class="navbar navbar-light bg-faded" *ngIf="isRouteNotActiveByMe('/login')">
   <a class="navbar-brand" href="#">Company</a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-link" [routerLink]="['/']" [routerLinkActive]="['active']">Home <span class="sr-only">(current)</span></a>
     </li>
-    <li class="nav-item"
-    [routerLink]="['/login']" [routerLinkActive]="['active']">
-      <a class="nav-link" href="/login">Login</a>
+    <li class="nav-item">
+      <a class="nav-link"
+      [routerLink]="['/login']" [routerLinkActive]="['active']">Login</a>
     </li>
   </ul>
   <form class="form-inline pull-xs-right">
