--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
       Your browser does not support the the video player.
       </video>
       <div class="card-block">
-        <h3> Title </h3>
+        <h3> Video- Title </h3>
         <p> Description </p>
       </div>
     </div>
